# INF2004_AAI10

./: .gitignore  CMakeLists.txt  README.md  flows.json
car/: CMakeLists.txt  config.h  filter.h  imu_lsm303.c  imu_lsm303.h  ir.c  ir.h  main.c  motor.c  motor.h  pid.h  pin.h  ultrasonic.c  ultrasonic.h
car/barcode/: CMakeLists.txt  barcode.c  barcode.h
car/demos/: CMakeLists.txt  config.h  demo1.c  demo1_copy.c  demo2.c  lwipopts.h  lwipopts_examples_common.h  robo_pico_dc_pwm.c  testDemo1.c  testDemo2.c  testDemo3.c
car/encoder/: CMakeLists.txt  encoder.c  encoder.h
car/imu/: CMakeLists.txt  imu.c  imu.h
car/ir/: CMakeLists.txt  ir_linefollow.c  ir_linefollow.h
car/ir/barcode/: CMakeLists.txt  IR_latest.txt  barcode.c  barcode.h
car/ir/line_following/: CMakeLists.txt  ir_linefollow.c  ir_linefollow.h
car/main/: CMakeLists.txt  lwipopts.h  main.c
car/motor/: CMakeLists.txt  motor.c  motor.h
car/pid/: pid.c  pid.h
car/servo/: CMakeLists.txt  servo.c  servo.h
car/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
car/wifi/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
car/wifi/tcp_server/: picow_tcp_server.c
car_demo1/: CMakeLists.txt  config.h  imu.c  imu.h  main.c  motor.c  motor.h
car_demo1/encoder/: CMakeLists.txt  encoder.c
car_demo1/imu/: imu.h
car_demo1/main/: CMakeLists.txt  config.h  main.c
car_demo1/motor/: motor.c
car_demo1/pid/: CMakeLists.txt  pid.c  pid.h
dashboard/: CMakeLists.txt
dashboard/wifi/: CMakeLists.txt  lwipopts_examples_common.h
dashboard/wifi/mqtt/: CMakeLists.txt  lwipopts.h  mqtt_client.c  mqtt_client.h
freertos_config/: FreeRTOSConfig.h
project/: CMakeLists.txt  main.c  motor.c  motor.h  ultrasonic.h
wifi/: CMakeLists.txt  lwipopts.h  mqtt.c  mqtt.h  wifi.c  wifi.h
