if (NOT PICO_NO_HARDWARE)
    add_subdirectory(encoder)
    add_subdirectory(motor)
    add_subdirectory(imu)
    add_subdirectory(pid)
    # add_subdirectory(ultrasonic)
    # add_subdirectory(ir)
    add_subdirectory(wifi) # builds a separate TCP server example executable
    add_subdirectory(main)
endif ()