if (NOT PICO_NO_HARDWARE)
    add_subdirectory(encoder)
    add_subdirectory(motor)
    add_subdirectory(imu)
    # add_subdirectory(ultrasonic)
    add_subdirectory(ir)
    add_subdirectory(barcode)
    add_subdirectory(wifi) # builds a separate TCP server example executable
    add_subdirectory(demos)
    add_subdirectory(main)
endif ()